--- a/css/styles.css
+++ b/css/styles.css
@@ -342,7 +342,7 @@ margin: 0 auto;
 
 /* -------Barbers-------- */
 .barbers {
-  background-color: lightblue;
+  background-color: #F7F7F7;
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -393,4 +393,25 @@ margin: 0 auto;
   text-align: center;
   letter-spacing: 0.02em;
   color: #ff6c00;
+}
+.gallery {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.container {
+}
+.gallery-text {
+  font-weight: 600;
+font-size: 11px;
+line-height: 1.36;
+text-transform: uppercase;
+color: var(--second-title-color);
+margin-bottom: 44px;
+}
+.gallery-list {
+  display: flex;
+  gap: 30px;
+}
+.gallery-item {
+  width: calc((100% - 90px) / 4);
 }
