--- a/css/styles.css
+++ b/css/styles.css
@@ -23,11 +23,13 @@ ul {
 body {
   font-family: "Open Sans" sans-serif;
 }
+
 img {
   display: block;
   /* max-width: 100%;
   height: auto; */
 }
+
 .list {
   list-style: none;
 }
@@ -56,6 +58,7 @@ img {
   outline: 1px solid red;
   margin: 0 auto;
 }
+
 .btn {
   min-width: 160px;
   height: 40px;
@@ -70,6 +73,7 @@ img {
   border-radius: 25px;
   background-color: transparent;
 }
+
 /* ---------Header-------- */
 
 .header {
@@ -94,6 +98,7 @@ img {
   gap: 30px;
   margin-right: auto;
 }
+
 .main-logo {
   margin-right: 131px;
 }
@@ -101,8 +106,8 @@ img {
 .header-tell {
   margin-right: 43px;
 }
-.item-navigation {
-}
+
+.item-navigation {}
 
 .link-navigation {
   font-weight: 600;
@@ -126,9 +131,7 @@ img {
   color: var(--title-color);
 }
 
-.hero-button {
-
-}
+.hero-button {}
 
 .hero-button:hover,
 .hero-button:focus {
@@ -137,20 +140,26 @@ img {
 }
 
 /* -------Hero----------- */
-.hero {
-  
-}
+.hero {}
+
 .hero .container {
   display: flex;
 }
+
 .hero-wrap {
-  background-color: #555555;
+  background-color: #504d4d;
+  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../img/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  block-size: cover;
   flex-grow: 1;
   padding: 272px 100px 208px 100px;
 }
+
 .hero-list {
   width: 100px;
 }
+
 .hero-pre-title {
   font-weight: 600;
   font-size: 11px;
@@ -186,17 +195,21 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+
 .about-list {
   display: flex;
   gap: 30px;
 }
+
 .about .container {
   display: flex;
   gap: 30px;
 }
+
 .about-textcontent {
   max-width: 470px;
 }
+
 .about-pre {
   margin-bottom: 20px;
   font-weight: 600;
@@ -232,6 +245,7 @@ img {
   letter-spacing: 0.02em;
   color: #555555;
 }
+
 .about-button {
   font-weight: 600;
   font-size: 12px;
@@ -256,6 +270,7 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+
 .prices-pre-title {
   font-weight: 600;
   font-size: 11px;
@@ -264,6 +279,7 @@ img {
   color: rgba(157, 164, 189, 0.6);
   margin-bottom: 20px;
 }
+
 .prices-title {
   font-weight: 700;
   font-size: 42px;
@@ -272,16 +288,18 @@ img {
   color: #ffffff;
   margin-bottom: 44px;
 }
+
 .prices-wrap {
   display: flex;
   gap: 30px;
   margin-bottom: 44px;
 }
+
 .prices-list {
   border: 1px solid #ffffff;
   width: calc((100% - 30px) / 2);
   padding: 30px 20px;
-  
+
 }
 
 .prices-item {
@@ -293,12 +311,14 @@ img {
   letter-spacing: 0.02em;
   color: #9da4bd;
 }
-.prices-item + .prices-item {
+
+.prices-item+.prices-item {
   margin-top: 20px;
 }
+
 .prices-button {
-display: block;
-margin: 0 auto;
+  display: block;
+  margin: 0 auto;
 }
 
 .benefits {
@@ -306,14 +326,15 @@ margin: 0 auto;
   padding-top: 120px;
   padding-bottom: 120px;
 }
-.container {
-}
-.list {
-}
-.benefits-list {
-}
-.benefits-item {
-}
+
+.container {}
+
+.list {}
+
+.benefits-list {}
+
+.benefits-item {}
+
 .benefits-pre-title {
   font-weight: 600;
   font-size: 11px;
@@ -322,6 +343,7 @@ margin: 0 auto;
   color: var(--second-title-color);
   margin-bottom: 20px;
 }
+
 .benefits-title {
   font-family: "Raleway";
   font-style: normal;
@@ -332,6 +354,7 @@ margin: 0 auto;
   color: var(--second-title-color);
   margin-bottom: 20px;
 }
+
 .benefits-after-title {
   font-weight: 400;
   font-size: 18px;
@@ -355,6 +378,7 @@ margin: 0 auto;
   color: var(--second-title-color);
   margin-bottom: 20px;
 }
+
 .barbers-title {
   font-family: "Raleway";
   font-style: normal;
@@ -365,6 +389,7 @@ margin: 0 auto;
   color: var(--second-title-color);
   margin-bottom: 44px;
 }
+
 .barbers-list {
   display: flex;
   gap: 30px;
@@ -373,10 +398,12 @@ margin: 0 auto;
 .barbers-item {
   width: calc((100% - 60px) / 3);
 }
+
 .barbers-contant {
   padding-top: 30px;
   padding-bottom: 30px;
 }
+
 .barbers-name {
   font-weight: 400;
   font-size: 18px;
@@ -386,6 +413,7 @@ margin: 0 auto;
   color: var(--second-title-color);
   margin-bottom: 8px;
 }
+
 .barbers-types {
   font-weight: 400;
   font-size: 14px;
@@ -393,25 +421,53 @@ margin: 0 auto;
   text-align: center;
   letter-spacing: 0.02em;
   color: #ff6c00;
+  margin-bottom: 30px;
 }
+.barbers-soc-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.barbers-soc-item {
+  width: 44px;
+  height: 44px;
+}
+.barbers-soc-link {
+  width: 100%;
+  height: 100%;
+  background-color:#ff6c00;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.barbers-soc-icon {
+  fill: #ffffff;
+}
+
+/* ---------Gallery------- */
 .gallery {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-.container {
-}
+
+.container {}
+
 .gallery-text {
   font-weight: 600;
-font-size: 11px;
-line-height: 1.36;
-text-transform: uppercase;
-color: var(--second-title-color);
-margin-bottom: 44px;
+  font-size: 11px;
+  line-height: 1.36;
+  text-transform: uppercase;
+  color: var(--second-title-color);
+  margin-bottom: 44px;
 }
+
 .gallery-list {
   display: flex;
   gap: 30px;
 }
+
 .gallery-item {
   width: calc((100% - 90px) / 4);
 }
