--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,23 @@ img {
   color: rgba(157, 164, 189, 0.6);
   margin-bottom: 20px;
 }
+.pre-title {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+ 
+}
+.pre-title::before {
+  content:'';
+  width: 60px;
+  height: 1px;
+  background: currentColor;
 
+}
 .hero-title {
   font-family: "Raleway";
   font-weight: 700;
@@ -266,7 +282,13 @@ img {
 
 /* ------Services and prices ------ */
 .prices {
-  background-color: antiquewhite;
+  background-color: #111319;
+  background-image: url(../img/prices-img.png);
+  max-width: 1600px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 0 auto;
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -296,44 +318,105 @@ img {
 }
 
 .prices-list {
-  border: 1px solid #ffffff;
   width: calc((100% - 30px) / 2);
   padding: 30px 20px;
-
+}
+.prices-list:first-child {
+  background: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+.prices-list:last-child {
+  background: linear-gradient(180deg, #090B13 0%, rgba(9, 11, 19, 0.2) 100%);
 }
 
 .prices-item {
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
+  gap: 12px;
+  
+  
+}
+.prices-item::before {
+  content: '';
+  width: 100px;
+  height: 1px;
+  flex-grow: 1;
+  background-color: rgba(157, 164, 189, 0.12);
+}
+.prices-item+.prices-item {
+  margin-top: 20px;
+}
+.prices-item-text {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.67;
   letter-spacing: 0.02em;
   color: #9da4bd;
 }
-
-.prices-item+.prices-item {
-  margin-top: 20px;
+.prices-item-text:first-child {
+  order: -1;
 }
-
 .prices-button {
   display: block;
   margin: 0 auto;
 }
 
+/* -------Benefits-------- */
+
 .benefits {
-  background-color: darkgray;
   padding-top: 120px;
   padding-bottom: 120px;
 }
+.benefits>.container {
+  display: flex;
+  gap: 130px;
+  padding-left: 85px;
+}
+.benefits-wrap {
+  max-width: 500px;
+}
 
-.container {}
+.benefits-list {
+  display: flex;
+  width: 370px;
+  flex-wrap: wrap;
 
-.list {}
+}
 
-.benefits-list {}
+.benefits-item {
+  width: 170px;
+  height: 133px;
+  background-color: #F7F7F7;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+  text-align: center;
+}
+.benefits-item:nth-child(odd) {
+  margin-right: 30px;
+}
+.benefits-item:nth-child(even) {
+  margin-top: 30px;
+}
+.benefits-item .count{
+font-weight: 700;
+font-size: 42px;
+line-height: 1.36;
+text-align: center;
+letter-spacing: 0.05em;
+color: #303030;
+margin-bottom: 6px;
+display: block;
+}
+.benefits-item-text {
+font-weight: 600;
+font-size: 11px;
+line-height: 1.36;
+text-align: center;
+color: #303030;
+}
 
-.benefits-item {}
 
 .benefits-pre-title {
   font-weight: 600;
@@ -436,16 +519,18 @@ img {
 .barbers-soc-link {
   width: 100%;
   height: 100%;
-  background-color:#ff6c00;
+  background-color:#ffffff;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .barbers-soc-icon {
-  fill: #ffffff;
+  fill: #303030;
 }
-
+.barbers-soc-link:hover .barbers-soc-icon{
+  fill: #FF6C00;
+}
 /* ---------Gallery------- */
 .gallery {
   padding-top: 120px;
