--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   --first-title-color: #ffffff;
   --accent-color: #ff6c00;
   --second-title-color: #303030;
+  --contacts-color: #9DA4BD;
 }
 
 h1,
@@ -55,8 +56,14 @@ img {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 1px solid red;
   margin: 0 auto;
+}
+
+.title {
+  font-family: 'Raleway', sans-serif;
+  font-size: 42px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
 }
 
 .btn {
@@ -72,12 +79,20 @@ img {
   border: 1px solid #ff6c00;
   border-radius: 25px;
   background-color: transparent;
+  transition: background-color 300ms linear, color 300ms linear;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: var(--accent-color);
+  color: var(--first-title-color);
 }
 
 /* ---------Header-------- */
 
 .header {
-  background-color: aquamarine;
+  position: absolute;
+  width: 100%;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -85,6 +100,7 @@ img {
 .header-container {
   display: flex;
   align-items: center;
+  padding-right: 32px;
 }
 
 .main-navigation {
@@ -114,7 +130,8 @@ img {
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.1em;
-  color: var(--title-color);
+  color: var(--first-title-color);
+  transition: color 300ms linear;
 }
 
 .link-navigation:hover,
@@ -128,19 +145,11 @@ img {
   line-height: 1.33;
   letter-spacing: 0.1em;
   /* text-transform: uppercase; */
-  color: var(--title-color);
+  color: var(--first-title-color);
 }
 
-.hero-button {}
-
-.hero-button:hover,
-.hero-button:focus {
-  background-color: var(--accent-color);
-  color: #ffffff;
-}
 
 /* -------Hero----------- */
-.hero {}
 
 .hero .container {
   display: flex;
@@ -156,8 +165,41 @@ img {
   padding: 272px 100px 208px 100px;
 }
 
-.hero-list {
+.hero-soc {
   width: 100px;
+  display: flex;
+  align-items: flex-end;
+  padding-left: 27px;
+  padding-bottom: 40px;
+  gap: 30px;
+}
+
+.hero-list {
+  display: flex;
+  transform: rotate(-90deg) translateY(100%);
+  transform-origin: bottom left;
+  gap: 30px;
+  align-items: center;
+}
+
+.hero-list::before {
+  content: '';
+  width: 60px;
+  height: 1px;
+  background-color: var(--second-title-color);
+}
+
+.hero-link {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: var(--second-title-color);
+}
+
+.hero-link:hover,
+.hero-link:focus {
+  color: var(--accent-color);
 }
 
 .hero-pre-title {
@@ -168,6 +210,7 @@ img {
   color: rgba(157, 164, 189, 0.6);
   margin-bottom: 20px;
 }
+
 .pre-title {
   font-weight: 600;
   font-size: 11px;
@@ -176,23 +219,21 @@ img {
   display: flex;
   align-items: center;
   gap: 20px;
- 
+
 }
+
 .pre-title::before {
-  content:'';
+  content: '';
   width: 60px;
   height: 1px;
   background: currentColor;
 
 }
+
 .hero-title {
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 72px;
-  line-height: 1.18;
-  letter-spacing: 0.05em;
-  color: var(--title-color);
+  color: var(--first-title-color);
   margin-bottom: 20px;
+
 }
 
 .hero-after-title {
@@ -203,6 +244,10 @@ img {
   color: #9da4bd;
   text-align: left;
   max-width: 360px;
+}
+
+.hero-button {
+  color: var(--first-title-color);
 }
 
 /* --------About--------- */
@@ -237,10 +282,6 @@ img {
 
 .about-title {
   margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 1.17;
-  letter-spacing: 0.05em;
   color: var(--second-title-color);
 }
 
@@ -263,24 +304,13 @@ img {
 }
 
 .about-button {
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.09em;
-  text-transform: uppercase;
   color: #303030;
-  border: 1px solid #ff6c00;
-  border-radius: 25px;
-  background-color: transparent;
 }
 
-.about-button:hover,
-.about-button:focus {
-  background-color: #ff6c00;
-  color: #ffffff;
-}
+
 
 /* ------Services and prices ------ */
+
 .prices {
   background-color: #111319;
   background-image: url(../img/prices-img.png);
@@ -303,10 +333,6 @@ img {
 }
 
 .prices-title {
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 1.17;
-  letter-spacing: 0.05em;
   color: #ffffff;
   margin-bottom: 44px;
 }
@@ -321,9 +347,11 @@ img {
   width: calc((100% - 30px) / 2);
   padding: 30px 20px;
 }
+
 .prices-list:first-child {
   background: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
 }
+
 .prices-list:last-child {
   background: linear-gradient(180deg, #090B13 0%, rgba(9, 11, 19, 0.2) 100%);
 }
@@ -333,9 +361,8 @@ img {
   justify-content: space-between;
   align-items: baseline;
   gap: 12px;
-  
-  
 }
+
 .prices-item::before {
   content: '';
   width: 100px;
@@ -343,9 +370,11 @@ img {
   flex-grow: 1;
   background-color: rgba(157, 164, 189, 0.12);
 }
+
 .prices-item+.prices-item {
   margin-top: 20px;
 }
+
 .prices-item-text {
   font-weight: 400;
   font-size: 18px;
@@ -353,13 +382,18 @@ img {
   letter-spacing: 0.02em;
   color: #9da4bd;
 }
+
 .prices-item-text:first-child {
   order: -1;
 }
+
 .prices-button {
   display: block;
   margin: 0 auto;
+  color: #ffffff;
+
 }
+
 
 /* -------Benefits-------- */
 
@@ -367,11 +401,13 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+
 .benefits>.container {
   display: flex;
   gap: 130px;
   padding-left: 85px;
 }
+
 .benefits-wrap {
   max-width: 500px;
 }
@@ -380,7 +416,6 @@ img {
   display: flex;
   width: 370px;
   flex-wrap: wrap;
-
 }
 
 .benefits-item {
@@ -393,28 +428,45 @@ img {
   padding-right: 24px;
   text-align: center;
 }
+
 .benefits-item:nth-child(odd) {
   margin-right: 30px;
 }
+
 .benefits-item:nth-child(even) {
   margin-top: 30px;
 }
-.benefits-item .count{
-font-weight: 700;
-font-size: 42px;
-line-height: 1.36;
-text-align: center;
-letter-spacing: 0.05em;
-color: #303030;
-margin-bottom: 6px;
-display: block;
+
+.benefits-item .count {
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #303030;
+  margin-bottom: 6px;
+  display: block;
+  position: relative;
 }
+
+.benefits-item .count::after {
+  content: '+';
+  font-size: 16px;
+  line-height: 1.38;
+  text-align: center;
+  color: var(--accent-color);
+  position: absolute;
+  top: 7px;
+  margin-left: 1px;
+
+}
+
 .benefits-item-text {
-font-weight: 600;
-font-size: 11px;
-line-height: 1.36;
-text-align: center;
-color: #303030;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  text-align: center;
+  color: #303030;
 }
 
 
@@ -463,12 +515,6 @@ color: #303030;
 }
 
 .barbers-title {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 1.17;
-  letter-spacing: 0.05em;
   color: var(--second-title-color);
   margin-bottom: 44px;
 }
@@ -482,13 +528,48 @@ color: #303030;
   width: calc((100% - 60px) / 3);
 }
 
+.barbers-item:hover .barbers-overlay {
+  transform: translateY(0);
+  transition: transform 700ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.barbers-overlay {
+  background-color: rgba(255, 166, 0, 0.427);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 20px;
+  padding: 20px;
+  transform: translateY(100%);
+  transition: transform 700ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.barbers-top-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.barbers-top-text {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.5;
+  color: var(--first-title-color);
+  padding: 40px;
+}
+
 .barbers-contant {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
 .barbers-name {
-  font-weight: 400;
   font-size: 18px;
   line-height: 1.39;
   text-align: center;
@@ -498,7 +579,6 @@ color: #303030;
 }
 
 .barbers-types {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.36;
   text-align: center;
@@ -506,6 +586,7 @@ color: #303030;
   color: #ff6c00;
   margin-bottom: 30px;
 }
+
 .barbers-soc-list {
   display: flex;
   justify-content: center;
@@ -516,28 +597,34 @@ color: #303030;
   width: 44px;
   height: 44px;
 }
+
 .barbers-soc-link {
   width: 100%;
   height: 100%;
-  background-color:#ffffff;
+  background-color: #ffffff;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .barbers-soc-icon {
   fill: #303030;
 }
-.barbers-soc-link:hover .barbers-soc-icon{
+
+.barbers-soc-link:hover .barbers-soc-icon {
   fill: #FF6C00;
 }
+
+
+
 /* ---------Gallery------- */
+
+
 .gallery {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-
-.container {}
 
 .gallery-text {
   font-weight: 600;
@@ -555,4 +642,202 @@ color: #303030;
 
 .gallery-item {
   width: calc((100% - 90px) / 4);
+}
+
+
+/* -----------Online booking-------- */
+.contacts-wrap {
+  background-color: #191C26;
+}
+
+.contacts-wrap>.container {
+  display: flex;
+}
+
+.booking {
+
+  width: calc(50% + 15px);
+  padding-top: 130px;
+  padding-bottom: 120px;
+  padding-right: 30px;
+}
+
+.booking-title {
+  color: #FFFFFF;
+  margin-bottom: 44px;
+}
+
+.online-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.online-item {
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(157, 164, 189, 0.4);
+  outline: transparent;
+  margin-bottom: 44px;
+  color: #9DA4BD;
+  transition: border-color 300ms linear;
+}
+
+.online-item:focus {
+  border-color: #ffffff;
+}
+
+.online-item:focus::placeholder {
+  color: #ffffff;
+}
+
+
+.online-item::placeholder {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: rgba(157, 164, 189, 0.4);
+  transition: color 300ms linear;
+}
+
+.online-input {
+  width: 270px;
+  height: 24px;
+  padding-bottom: 8px;
+}
+
+.online-massage {
+  width: 100%;
+  height: 76px;
+  resize: none;
+}
+
+
+.online-button {
+  color: #ffffff;
+}
+
+.btn {}
+
+/* ---------Contacts--------- */
+.contacts-wrap {
+  max-width: 1600px;
+  margin: 0 auto;
+  background-color: #191C26;
+  background-image: url(../img/contacts-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: calc(50% - 15px) 100%;
+}
+
+.contacts {
+
+  width: calc(50% - 15px);
+  padding-left: 100px;
+  padding-top: 130px;
+  padding-bottom: 120px;
+}
+
+.contacts-title {
+  color: #FFFFFF;
+  margin-bottom: 70px;
+}
+
+.contacts-address {}
+
+.contacts-list {
+  margin-bottom: 70px;
+}
+
+.contacts-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.contacts-link {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: #9DA4BD;
+}
+
+.contacts-link.bold {
+  font-weight: 700;
+}
+
+
+.contacts-workinghours {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  text-transform: uppercase;
+  color: var(--first-title-color);
+  margin-bottom: 20px;
+}
+
+.contacts-workinghours::before {
+  content: '';
+  width: 60px;
+  height: 1px;
+  background: currentColor;
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.contacts-worktime {
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: #9DA4BD;
+}
+
+
+
+/* -------------Footer----------- */
+
+.footer {
+  padding-top: 56px;
+  padding-bottom: 56px;
+}
+
+.footer>.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-copy {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: #9DA4BD;
+}
+
+.footer-list {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+
+.footer-list::before {
+  content: '';
+  width: 60px;
+  height: 1px;
+  background: currentColor;
+  display: inline-block;
+
+
+}
+
+.footer-item {}
+
+.footer-link {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: #303030;
 }
